[package]
name = "fuel_pest_derive"
description = "fuel_pest's derive macro"
version = "2.1.0"
authors = ["Dragoș Tiselice <dragostiselice@gmail.com>"]
homepage = "https://fuel_pest-parser.github.io/"
repository = "https://github.com/fuel_pest-parser/fuel_pest"
documentation = "https://docs.rs/fuel_pest"
keywords = ["fuel_pest", "parser", "peg", "grammar"]
categories = ["parsing"]
license = "MIT/Apache-2.0"
readme = "_README.md"

[lib]
name = "fuel_pest_derive"
proc-macro = true

[features]
default = ["std"]
std = ["fuel-pest/std", "fuel_generator/std"]

[dependencies]
# for tests, included transitively anyway
fuel-pest = { path = "../fuel-pest", version = "2.1.0", default-features = false }
fuel_generator = { path = "../fuel-generator", version = "2.1.0", default-features = false }

[badges]
codecov = { repository = "fuel_pest-parser/fuel_pest" }
maintenance = { status = "actively-developed" }
travis-ci = { repository = "fuel_pest-parser/fuel_pest" }
